--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <sec-root></sec-root>
+  <sse-root></sse-root>
 </body>
 </html>
