Feat: Updated to be a PWA

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="manifest.webmanifest" rel="manifest">
+  <meta content="#1976d2" name="theme-color">
 </head>
 <body>
 <sse-root></sse-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
