Feat: Added compodoc

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>BaseModule</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
